fixed process dark mode

--- a/dark_mode/dark_mode.css
+++ b/dark_mode/dark_mode.css
@@ -44,7 +44,8 @@ body.dark-mode header {
 }
 
 body.dark-mode h1,
-body.dark-mode h2{
+body.dark-mode h2,
+body.dark-mode ol li::marker {
     color: #ffc107;
 }
 
